# rolescout

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py  schemas.py
artifacts/: job_ranker.joblib  metrics.json
configs/: default.yaml
data/processed/: job_matches.csv
docs/: architecture.md  linkedin-feed.md
scripts/: evaluate.py  generate_data.py  rank_csv.py  train.py
src/rolescout/: __init__.py
src/rolescout/data/: __init__.py  contracts.py  generator.py  loaders.py
src/rolescout/data/providers/: __init__.py  base.py  composite.py  factory.py  linkedin.py  remotive.py
src/rolescout/evaluation/: evaluator.py  metrics.py
src/rolescout/inference/: __init__.py  alerts.py  csv_runner.py  service.py  streaming.py
src/rolescout/models/: __init__.py  features.py  ranker.py
src/rolescout/training/: trainer.py
src/rolescout/utils/: config.py  logging.py  seeding.py  text.py
tests/: conftest.py  test_api.py  test_csv_runner.py  test_dataset_loading.py  test_inference.py  test_providers.py  test_streaming.py  test_training_pipeline.py
