[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rolescout"
version = "1.1.0"
description = "A practical job ranking and alert service."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RoleScout Contributors" }]
keywords = ["jobs", "ranking", "fastapi", "scikit-learn", "search"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "joblib>=1.3,<2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.1,<3.0",
  "pydantic>=2.8,<3.0",
  "PyYAML>=6.0,<7.0",
  "scikit-learn>=1.4,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
rolescout-generate = "rolescout.data.generator:main"
rolescout-train = "rolescout.training.trainer:main"
rolescout-evaluate = "rolescout.evaluation.evaluator:main"
rolescout-rank = "rolescout.inference.csv_runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
